--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "jasmine/jasmine",
+    "name": "jasminecms/jasmine",
     "description": "A Laravel based CMS.",
     "license": "MIT",
     "authors": [
