--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.13.0",
         "@kazupon/vue-i18n-loader": "^0.5.0",
+        "@tinymce/tinymce-vue": "^3.2.1",
         "axios": "^0.19",
         "bootstrap": "^4.4.1",
         "cross-env": "^7.0",
@@ -22,8 +23,11 @@
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
         "sweetalert2": "^9.10.12",
+        "tinymce": "^5.2.2",
         "vue": "^2.6.11",
+        "vue-croppa": "^1.3.8",
         "vue-i18n": "^8.17.4",
-        "vue-template-compiler": "^2.6.11"
+        "vue-template-compiler": "^2.6.11",
+        "vuedraggable": "^2.23.2"
     }
 }
