--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         }
     ],
     "require": {
+        "alexusmai/laravel-file-manager": "^2.4",
         "laravel/framework": "^6.2",
         "yajra/laravel-datatables-oracle": "^9.9",
         "ext-json": "*"
