--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "bootstrap": "^4.4.1",
         "cross-env": "^7.0",
         "hamburgers": "^1.1.3",
+        "laravel-file-manager": "^2.4.14",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
         "resolve-url-loader": "^3.1.0",
@@ -28,6 +29,7 @@
         "vue-croppa": "^1.3.8",
         "vue-i18n": "^8.17.4",
         "vue-template-compiler": "^2.6.11",
-        "vuedraggable": "^2.23.2"
+        "vuedraggable": "^2.23.2",
+        "vuex": "^3.4.0"
     }
 }
