--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "alexusmai/laravel-file-manager": "^2.4",
         "laravel/framework": "^6.2",
+        "spatie/laravel-translatable": "^4.3",
         "yajra/laravel-datatables-oracle": "^9.9",
         "ext-json": "*"
     },
