--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "hamburgers": "^1.1.3",
         "laravel-file-manager": "^2.4.14",
         "laravel-mix": "^5.0.1",
+        "laravel-mix-bundle-analyzer": "^1.0.5",
         "lodash": "^4.17.13",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
