--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "vue-i18n": "^8.17.4",
         "vue-template-compiler": "^2.6.11",
         "vuedraggable": "^2.23.2",
+        "vuejs-datepicker": "^1.6.2",
         "vuex": "^3.4.0"
     }
 }
