--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "alexusmai/laravel-file-manager": "^2.4",
         "laravel/framework": "^6.2|^7.0|^8.0",
+        "laravel/ui": "^1.0|^2.0|^3.0",
         "spatie/laravel-translatable": "^4.3",
         "yajra/laravel-datatables-oracle": "^9.9",
         "ext-json": "*"
