migrated to npm and updated packages

--- a/public/auth-assets/mix-manifest.json
+++ b/public/auth-assets/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/css/vendor.css": "/css/vendor.css",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/css/vendor.css": "/css/vendor.css"
 }
