--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
     "private": true,
     "scripts": {
         "dev": "npm run development",
-        "development": "cross-env process.env.section=app-assets NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env process.env.section=app-assets NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "cross-env process.env.section=app-assets NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "mix --production"
     },
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.13.0",
@@ -15,20 +15,19 @@
         "@tinymce/tinymce-vue": "^3.2.1",
         "axios": "^0.19",
         "bootstrap": "^4.4.1",
-        "cross-env": "^7.0",
         "hamburgers": "^1.1.3",
         "laravel-file-manager": "^2.5",
-        "laravel-mix": "^5.0.4",
-        "laravel-mix-bundle-analyzer": "^1.0.5",
-        "lodash": "^4.17.13",
-        "resolve-url-loader": "^3.1.0",
-        "sass": "^1.15.2",
-        "sass-loader": "^8.0.0",
-        "sweetalert2": "^9.10.12",
+        "laravel-mix": "^6.0",
+        "postcss": "^8.1.14",
+        "resolve-url-loader": "^3.1.2",
+        "sass": "^1.32.13",
+        "sass-loader": "^11.0.1",
+        "sweetalert2": "^11.0.8",
         "tinymce": "^5.2.2",
         "vue": "^2.6.11",
         "vue-croppa": "^1.3.8",
         "vue-i18n": "^8.17.4",
+        "vue-loader": "^15.9.5",
         "vue-template-compiler": "^2.6.11",
         "vuedraggable": "^2.23.2",
         "vuejs-datepicker": "^1.6.2",
