--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "sweetalert2": "^11.0.8",
         "tinymce": "^5.2.2",
         "vue": "^2.6.11",
+        "vue-color": "^2.8.1",
         "vue-croppa": "^1.3.8",
         "vue-i18n": "^8.17.4",
         "vue-loader": "^15.9.5",
