--- a/composer.json
+++ b/composer.json
@@ -1,37 +1,43 @@
 {
-    "name": "jasminecms/jasmine",
-    "description": "A Laravel based CMS.",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Mordi Sacks"
-        }
-    ],
-    "require": {
-        "php": "^8.0",
-        "alexusmai/laravel-file-manager": "^2.5",
-        "laravel/framework": "^8.0",
-        "laravel/ui": "^3.0",
-        "spatie/laravel-translatable": "^4.3",
-        "yajra/laravel-datatables-oracle": "^9.9",
-        "ext-json": "*"
-    },
-    "autoload": {
-        "psr-4": {
-            "Jasmine\\Jasmine\\": "src/"
-        },
-        "files": [
-            "helpers.php"
-        ]
-    },
-    "extra": {
-        "laravel": {
-            "providers": [
-                "Jasmine\\Jasmine\\JasmineServiceProvider"
-            ],
-            "aliases": {
-                "Jasmine": "Jasmine\\Jasmine\\Facades\\Jasmine"
-            }
-        }
+  "name": "jasminecms/jasmine",
+  "description": "A Laravel based CMS.",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Mordi Sacks"
     }
+  ],
+  "require": {
+    "php": "^8.0",
+    "ext-json": "*",
+    "alexusmai/laravel-file-manager": "^2.5|^3.0",
+    "laravel/framework": "^8.0|^9.0",
+    "laravel/ui": "^3.0|^4.0",
+    "spatie/laravel-translatable": "^5.0",
+    "yajra/laravel-datatables-oracle": "^9.21.2"
+  },
+  "require-dev": {
+    "orchestra/testbench": "^6.0|^7.0",
+    "phpunit/phpunit": "^9.5"
+  },
+  "autoload": {
+    "psr-4": {
+      "Jasmine\\Jasmine\\": "src/"
+    },
+    "files": [
+      "helpers.php"
+    ]
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "Jasmine\\Jasmine\\JasmineServiceProvider"
+      ],
+      "aliases": {
+        "Jasmine": "Jasmine\\Jasmine\\Facades\\Jasmine"
+      }
+    }
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
