--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vue-i18n": "^9.2.2",
     "vue-inline-svg": "^2.1.1",
     "vue-loader": "^17.0",
+    "vue3-sfc-loader": "^0.8.4",
     "vuedraggable": "^4.1.0",
     "vuex": "^4.1.0",
     "ziggy-js": "^1.5.0"
