--- a/public/app-assets/mix-manifest.json
+++ b/public/app-assets/mix-manifest.json
@@ -1,14 +1,15 @@
 {
-    "/js/app.js": "/js/app.js?id=359fce968c03a70563a78861fb21ffc7",
-    "/js/manifest.js": "/js/manifest.js?id=3f72a0f56fc2e883d8bf69b82ec41550",
-    "/js/Bread-Edit.js": "/js/Bread-Edit.js?id=3fad615c4df7a149b954964d4eccc535",
-    "/js/Bread-Index.js": "/js/Bread-Index.js?id=571d34886e7379effeb32754b0096faf",
-    "/js/Dashboard.js": "/js/Dashboard.js?id=f210f4915d6426144fe4227d39554d26",
-    "/js/FileManagerPage.js": "/js/FileManagerPage.js?id=14043f7c1fcdfb9388f1edde3b198f58",
-    "/js/Profile.js": "/js/Profile.js?id=ab1c13fb5db52b7b41a09072a35d4104",
-    "/css/vendor.css": "/css/vendor.css?id=7466a908841fb0cd296248b1c3d8f264",
+    "/js/app.js": "/js/app.js?id=e2d1136a41f8bd9a036710cccea4d35a",
+    "/js/manifest.js": "/js/manifest.js?id=d7b46212b029d8716feaa0244acc2fb6",
+    "/js/Bread-Edit.js": "/js/Bread-Edit.js?id=c15b2e6e7871f00bcca7df7a494278b8",
+    "/js/Bread-Index.js": "/js/Bread-Index.js?id=3eb6147bbd4033edb80cc611641a96df",
+    "/js/Dashboard.js": "/js/Dashboard.js?id=822b7355ceb453e113f87c6e77054676",
+    "/js/Dynamic.js": "/js/Dynamic.js?id=d34420a4ebe9a6e3bf963ef4e1ceef6a",
+    "/js/FileManagerPage.js": "/js/FileManagerPage.js?id=85674fa1331f3bb619f8ec46a7fb0287",
+    "/js/Profile.js": "/js/Profile.js?id=526fa41ec1a4d2e69413f3e9b488e48f",
+    "/css/vendor.css": "/css/vendor.css?id=8c83f6eca47428508f9b8fa077111947",
     "/css/app.css": "/css/app.css?id=bcee283fbae43e62b445359fe68e991e",
-    "/js/vendor.js": "/js/vendor.js?id=7630a6c15e5409dcaffbaf08451a14d5",
+    "/js/vendor.js": "/js/vendor.js?id=0025c4b27808fe0459bf71e62e86bdcc",
     "/js/icons/default/icons.js": "/js/icons/default/icons.js?id=9034bf9d33164db799056592af8f8041",
     "/js/icons/default/icons.min.js": "/js/icons/default/icons.min.js?id=18db240f0fcf5635332dbadd948cc500",
     "/js/icons/default/index.js": "/js/icons/default/index.js?id=9c5b7a740ca30e13e64b6a4de5b17c77",
