--- a/composer.json
+++ b/composer.json
@@ -8,21 +8,21 @@
     }
   ],
   "require": {
-    "php": "^8.0",
+    "php": "^8.1",
     "ext-json": "*",
-    "alexusmai/laravel-file-manager": "^2.5|^3.0",
-    "laravel/framework": "^8.0|^9.0",
-    "laravel/ui": "^3.0|^4.0",
-    "spatie/laravel-translatable": "^5.2",
-    "inertiajs/inertia-laravel": "^0.6.3",
+    "alexusmai/laravel-file-manager": "^3.0.5",
+    "laravel/framework": "^10.0",
+    "laravel/ui": "^4.0",
+    "spatie/laravel-translatable": "^6.3",
+    "inertiajs/inertia-laravel": "^0.6.5",
     "tightenco/ziggy": "^1.5",
     "composer-runtime-api": "^2.2",
     "pragmarx/google2fa": "^8.0",
-    "spatie/eloquent-sortable": "^4.0"
+    "spatie/eloquent-sortable": "^4.0.2"
   },
   "require-dev": {
-    "orchestra/testbench": "^6.0|^7.0",
-    "phpunit/phpunit": "^9.5"
+    "orchestra/testbench": "^8.0",
+    "phpunit/phpunit": "^10.0"
   },
   "autoload": {
     "psr-4": {
