--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vueform/multiselect": "^2.6.6",
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.9.1",
+    "dayjs": "^1.11.10",
     "laravel-file-manager": "^3.0.3",
     "laravel-mix": "^6.0.49",
     "resolve-url-loader": "^5.0.0",
@@ -37,5 +38,8 @@
     "vuedraggable": "^4.1.0",
     "vuex": "^4.1.0",
     "ziggy-js": "^1.5.0"
+  },
+  "dependencies": {
+    "@headlessui/vue": "^1.7.19"
   }
 }
