--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "devDependencies": {
     "@chenfengyuan/vue-qrcode": "^2.0.0",
+    "@fawmi/vue-google-maps": "^0.9.79",
     "@fortawesome/fontawesome-free": "^6.2.0",
+    "@headlessui/vue": "^1.7.19",
+    "@inertiajs/vue3": "^1.2.0",
     "@ivanv/vue-collapse-transition": "^1.0.2",
     "@tinymce/tinymce-vue": "^5.0.0",
     "@vueform/multiselect": "^2.6.6",
@@ -34,8 +37,6 @@
     "vue3-sfc-loader": "^0.8.4",
     "vuedraggable": "^4.1.0",
     "vuex": "^4.1.0",
-    "ziggy-js": "^1.5.0",
-    "@headlessui/vue": "^1.7.19",
-    "@inertiajs/vue3": "^1.2.0"
+    "ziggy-js": "^1.5.0"
   }
 }
