--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,16 @@
     "spatie/eloquent-sortable": "^4.4"
   },
   "require-dev": {
-    "orchestra/testbench": "^9.0",
-    "phpunit/phpunit": "^11.0"
+    "laravel/pint": "^1.14",
+    "nunomaduro/collision": "^8.1.1",
+    "larastan/larastan": "^2.9",
+    "orchestra/testbench": "^9.0.0",
+    "pestphp/pest": "^2.35",
+    "pestphp/pest-plugin-arch": "^2.7",
+    "pestphp/pest-plugin-laravel": "^2.3",
+    "phpstan/extension-installer": "^1.3",
+    "phpstan/phpstan-deprecation-rules": "^1.1",
+    "phpstan/phpstan-phpunit": "^1.3"
   },
   "autoload": {
     "psr-4": {
@@ -32,6 +40,17 @@
     "files": [
       "helpers.php"
     ]
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Jasmine\\Jasmine\\Tests\\": "tests/"
+    }
+  },
+  "scripts": {
+    "analyse": "vendor/bin/phpstan analyse",
+    "test": "vendor/bin/pest",
+    "test-coverage": "vendor/bin/pest --coverage",
+    "format": "vendor/bin/pint"
   },
   "extra": {
     "laravel": {
@@ -44,5 +63,11 @@
     }
   },
   "minimum-stability": "dev",
-  "prefer-stable": true
+  "prefer-stable": true,
+  "config": {
+    "allow-plugins": {
+      "pestphp/pest-plugin": true,
+      "phpstan/extension-installer": true
+    }
+  }
 }
